2002-11-10  Nick Garnett  <nickg@ecoscentric.com>

	* src/signal.cxx: Added three exportable routines that may be used
	by other packages to manipulate the signal mask, test for
	deliverable signals, and have signals delivered at controlled
	points.

	* include/export.h: Added macros to export signal mask management,
	detection and delivery to other packages.

2002-11-05  Jonathan Larmour  <jifl@eCosCentric.com>

	* tests/tm_basic.cxx: Use <cyg/infra/diag.h> for diag_printf
	prototype.

2002-05-23  Jesper Skov  <jskov@redhat.com>

	* cdl/posix.cdl: Don't build tests using signals when posix
	signals are disabled.

2002-05-21  Jesper Skov  <jskov@redhat.com>

	* tests/mutex3.c: Added an NA check.

2002-04-09  Jonathan Larmour  <jlarmour@redhat.com>

	* src/signal.cxx (cyg_deliver_signals): Don't assert here for an
	unhandled signal (unless there's no _exit). Trace it though.

2002-04-08  Jonathan Larmour  <jlarmour@redhat.com>

	* src/sem.cxx (sem_getvalue): return 0, and put value in *sval.

2002-04-03  Jonathan Larmour  <jlarmour@redhat.com>

	* cdl/posix.cdl: Allow clocks to be configured again.

2002-03-05  Jesper Skov  <jskov@redhat.com>

	* src/pprivate.h: Correct conditional declaration of timespec
	functions.

	* src/sched.cxx (sched_rr_get_interval): Return ENOSYS when
	CYGPKG_POSIX_CLOCKS disabled.

2002-02-27  Robin Farine  <robin.farine@terminus.org>

	* src/pthread.cxx (pthread_exit): While running thread static
	storage destructors, set the thread's value associated with the
	current key to NULL before invoking the destructor.

2002-02-14  Nick Garnett  <nickg@redhat.com>

	* doc/posix.sgml: Generally fixed up and reformatted to make this
	file readable by mere humans. Some omissions and outdated
	information fixed, but not substantially changed from the
	original.

	* cdl/posix.cdl: Changed some definitions and dependencies so that
	disabling the timers does not disable threads too. This was