@@ -1,3 +1,8 @@
+2002-11-26  Nick Garnett  <nickg@ecoscentric.com>
+
+	* src/signal.cxx: Changed the three routines added in the last
+	change so that they can be called safely from non-POSIX threads.
+
 2002-11-10  Nick Garnett  <nickg@ecoscentric.com>
 
 	* src/signal.cxx: Added three exportable routines that may be used
